--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,12 @@
-include ':app'
+include ':app',':Utils_19:common19',':Utils_17:common',':Utils_Debug:common',':Utils_Resources:common'
+
+include':Utils_16:common16'
+project(':Utils_16:common16').projectDir = new File(settingsDir, './Utils_19/Utils_16/common16')
+
+include ':Utils_14:common14'
+project(':Utils_14:common14').projectDir = new File(settingsDir, './Utils_19/Utils_16/Utils_14/common14')
+
+include ':Utils_1:common1'
+project(':Utils_1:common1').projectDir = new File(settingsDir, './Utils_19/Utils_16/Utils_14/Utils_1/common1')
+
 rootProject.name = "Circuit Loop"
