--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,10 @@
-include ':app',':Utils_19:common19',':Utils_17:common',':Utils_Debug:common',':Utils_Resources:common',':Utils_Java'
+include ':app',':Utils_19:common19',':Utils_19:tests19',':Utils_17:common',':Utils_Debug:common',':Utils_Resources:common',':Utils_Java'
 
 include':Utils_16:common16'
 project(':Utils_16:common16').projectDir = new File(settingsDir, './Utils_19/Utils_16/common16')
+
+include':Utils_16:tests16'
+project(':Utils_16:tests16').projectDir = new File(settingsDir, './Utils_19/Utils_16/tests16')
 
 include ':Utils_14:common14'
 project(':Utils_14:common14').projectDir = new File(settingsDir, './Utils_19/Utils_16/Utils_14/common14')
