--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="ndk.banee.circuitloop">
 
     <application
@@ -7,8 +8,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme"
+        tools:replace="android:allowBackup">
+        <activity
+            android:name=".RawMaterialListActivity"
+            android:label="Main Agents"
+            android:theme="@style/AppTheme.Template.Base" />
         <activity android:name=".AdminDashboardActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
