--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,12 @@
         </activity>
 
         <activity
-            android:name=".RowMaterialsActivity"
+            android:name=".RawMaterialsActivity"
             android:label="Raw Materials" />
         <activity
             android:name=".RawMaterialInsertionActivity"
             android:label="Insert Raw Materials" />
+        <activity android:name=".RawMaterialStockActivity" />
 
     </application>
 
