--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
+        <activity android:name=".Staff_item"></activity>
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -20,16 +21,15 @@
             android:name=".RawMaterialListActivity"
             android:label="Raw Materials"
             android:theme="@style/AppTheme.Template.Base" />
-
         <activity
             android:name=".AdminDashboardActivity"
             android:label="Admin Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".RawMaterialsActivity"
             android:label="Raw Materials" />
@@ -37,7 +37,6 @@
             android:name=".RawMaterialInsertionActivity"
             android:label="Insert Raw Materials" />
         <activity android:name=".RawMaterialStockActivity" />
-
     </application>
 
 </manifest>
