--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".Payment_view"></activity>
+        <activity android:name=".Take_payment"></activity>
+        <activity android:name=".Payment_view" />
         <activity android:name=".Payment_History" />
         <activity android:name=".StaffHome" />
         <activity android:name=".Shop_owner_home" />
