--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".Take_payment"></activity>
+        <activity android:name=".Add_Row_materials"></activity>
+        <activity android:name=".Add_shop_owner" />
+        <activity android:name=".Take_payment" />
         <activity android:name=".Payment_view" />
         <activity android:name=".Payment_History" />
         <activity android:name=".StaffHome" />
