--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".Add_Supplier"></activity>
+        <activity android:name=".add_product"></activity>
+        <activity android:name=".Account_item" />
+        <activity android:name=".Add_Supplier" />
         <activity android:name=".Add_products" />
         <activity android:name=".Add_Row_materials" />
         <activity android:name=".Add_shop_owner" />
