--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".add_product"></activity>
+        <activity android:name=".Account_Home"></activity>
+        <activity android:name=".add_product" />
         <activity android:name=".Account_item" />
         <activity android:name=".Add_Supplier" />
         <activity android:name=".Add_products" />
