--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".Suppler_Card_Item"></activity>
+        <activity android:name=".Add_Product_Sale_Activity"></activity>
+        <activity android:name=".Suppler_Card_Item" />
         <activity android:name=".Account_Home" />
         <activity android:name=".add_product" />
         <activity android:name=".Account_item" />
