--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".Products"></activity>
+        <activity android:name=".Add_Staff"></activity>
+        <activity android:name=".Products" />
         <activity android:name=".Admin_Home" />
         <activity android:name=".Add_Product_Sale_Activity" />
         <activity android:name=".Suppler_Card_Item" />
