--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app',':Utils_19:common19',':Utils_19:tests19',':Utils_17:common',':Utils_11:common11',':Utils_9:common9',':Utils_3:common3',':Utils_Debug:common',':Utils_Resources:common',':Utils_Java'
+include ':app',':Utils_19:common19',':Utils_19:tests19',':Utils_17:common',':Utils_9:common9',':Utils_3:common3',':Utils_Debug:common',':Utils_Java'
 
 include':Utils_16:common16'
 project(':Utils_16:common16').projectDir = new File(settingsDir, './Utils_19/Utils_16/common16')
@@ -8,6 +8,15 @@ project(':Utils_16:tests16').projectDir = new File(settingsDir, './Utils_19/Util
 
 include ':Utils_14:common14'
 project(':Utils_14:common14').projectDir = new File(settingsDir, './Utils_19/Utils_16/Utils_14/common14')
+
+include ':Utils11:common11'
+project(':Utils11:common11').projectDir = new File(settingsDir, './Utils_19/Utils_16/Utils11/common11')
+
+include ':Utils3:common3'
+project(':Utils3:common3').projectDir = new File(settingsDir, './Utils9/Utils3/common3')
+
+include ':Resources:common'
+project(':Resources:common').projectDir = new File(settingsDir, './Utils9/Resources/common')
 
 include ':Utils_1:common1'
 project(':Utils_1:common1').projectDir = new File(settingsDir, './Utils_19/Utils_16/Utils_14/Utils_1/common1')
