--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,7 +104,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'org.javatuples:javatuples:1.2'
     implementation 'de.codecrafters.tableview:tableview:2.8.1'
-    implementation project(path: ':Utils_3:common3')
+    implementation project(path: ':Utils3:common3')
 
     testImplementation 'junit:junit:4.13'
 }
